[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unishare-common = { path = "../common" }
structopt = "0.3.26"
bincode = "1.3.3"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["bytes", "fs", "net", "rt-multi-thread", "signal"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
remoc = "0.9.16"
fuser = "0.11.0"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
libc = "0.2.122"
async-backtrace = "0.2.2"
console-subscriber = "0.1.8"
