[package]
name = "unishare-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
fuser = { version = "0.11.0", features = ["serializable"] }
remoc = "0.9.16"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
