[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unishare-storage = { path = "../storage" }
unishare-common = { path = "../common" }
unishare-transport = { path = "../transport" }
structopt = "0.3.26"
bincode = "1.3.3"
serde = "1.0.136"
remoc = "0.9.16"
guard = "0.5.1"
tokio = { version = "1.17.0", features = ["bytes", "fs", "net", "rt-multi-thread"] }
futures = "0.3.21"
thiserror = "1.0.30"
anyhow = "1.0.56"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
