[package]
name = "unishare-storage"
version = "0.1.0"
authors = ["Benny Aguilera <bennycaguilera@gmail.com>"]
edition = "2018"

[dependencies]
unishare-common = { path = "../common" }
anyhow = "1.0.41"
derive_more = "0.99.14"
graph_storage = { path = "../../graph_storage" }
hashbrown = "0.11.2"
nix = "0.22.0"
thiserror = "1.0.25"
base64 = "0.13.0"
sled = "0.34.7"
byteorder = "1.4.3"
zerocopy = "0.6.1"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
guard = "0.5.1"
fuser = "0.11.0"
