[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#unishare-common = { path = "../common" }
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
# TODO: rt only necessary for tests
tokio = { version = "1.17.0", features = ["bytes", "net", "sync", "io-util", "rt", "rt-multi-thread"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
futures = "0.3.25"
#async-backtrace = "0.2.2"
